--- a/index.ipynb
+++ b/index.ipynb
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -373,6 +373,7 @@
      "output_type": "stream",
      "text": [
       "[-10, 1, 1, 2, 3, 4, 5, 5, 6, 20]\n",
+      "1\n",
       "[]\n",
       "nan\n",
       "[ 1.76405235  0.40015721  0.97873798  2.2408932   1.86755799 -0.97727788\n",
@@ -393,6 +394,7 @@
       " -0.40317695  1.22244507  0.20827498  0.97663904  0.3563664   0.70657317\n",
       "  0.01050002  1.78587049  0.12691209  0.40198936  1.2         1.2\n",
       "  1.2         1.2         1.2       ]\n",
+      "5\n",
       "[-0.97727788  0.95008842 -0.15135721 -0.10321885  0.4105985   0.14404357\n",
       "  1.45427351  0.76103773  0.12167502  0.44386323  0.33367433  1.49407907\n",
       " -0.20515826  0.3130677  -0.85409574 -2.55298982  0.6536186   0.8644362\n",
@@ -426,7 +428,7 @@
    "source": [
     "def get_trimmed_mean(data, trim=.05):\n",
     "    print(data)\n",
-    "    \n",
+    "    print(int(trim*len(data)))\n",
     "    data = data[int(trim*len(data)):-int(trim*len(data))+1]\n",
     "    print(data)\n",
     "    return np.mean(data)\n",
