Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -374,8 +374,8 @@
      "text": [
       "[-10, 1, 1, 2, 3, 4, 5, 5, 6, 20]\n",
       "1\n",
-      "[]\n",
-      "nan\n",
+      "[1, 1, 2, 3, 4, 5, 5, 6, 20]\n",
+      "5.222222222222222\n",
       "[ 1.76405235  0.40015721  0.97873798  2.2408932   1.86755799 -0.97727788\n",
       "  0.95008842 -0.15135721 -0.10321885  0.4105985   0.14404357  1.45427351\n",
       "  0.76103773  0.12167502  0.44386323  0.33367433  1.49407907 -0.20515826\n",
@@ -413,23 +413,13 @@
       "  0.70657317  0.01050002  1.78587049  0.12691209  0.40198936  1.2       ]\n",
       "-0.0007353872327453456\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/numpy/core/fromnumeric.py:3118: RuntimeWarning: Mean of empty slice.\n",
-      "  out=out, **kwargs)\n",
-      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/numpy/core/_methods.py:85: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  ret = ret.dtype.type(ret / rcount)\n"
-     ]
     }
    ],
    "source": [
     "def get_trimmed_mean(data, trim=.05):\n",
     "    print(data)\n",
     "    print(int(trim*len(data)))\n",
-    "    data = data[int(trim*len(data)):-int(trim*len(data))+1]\n",
+    "    data = data[int(trim*len(data)):len(data)-int(trim*len(data))+1]\n",
     "    print(data)\n",
     "    return np.mean(data)\n",
     "\n",
