--- a/index.ipynb
+++ b/index.ipynb
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -374,8 +374,8 @@
      "text": [
       "[-10, 1, 1, 2, 3, 4, 5, 5, 6, 20]\n",
       "1\n",
-      "[1, 1, 2, 3, 4, 5, 5, 6, 20]\n",
-      "5.222222222222222\n",
+      "[1, 1, 2, 3, 4, 5, 5, 6]\n",
+      "3.375\n",
       "[ 1.76405235  0.40015721  0.97873798  2.2408932   1.86755799 -0.97727788\n",
       "  0.95008842 -0.15135721 -0.10321885  0.4105985   0.14404357  1.45427351\n",
       "  0.76103773  0.12167502  0.44386323  0.33367433  1.49407907 -0.20515826\n",
@@ -410,8 +410,8 @@
       " -0.57884966 -0.31155253  0.05616534 -1.16514984  0.90082649  0.46566244\n",
       " -1.53624369  1.48825219  1.89588918  1.17877957 -0.17992484 -1.07075262\n",
       "  1.05445173 -0.40317695  1.22244507  0.20827498  0.97663904  0.3563664\n",
-      "  0.70657317  0.01050002  1.78587049  0.12691209  0.40198936  1.2       ]\n",
-      "-0.0007353872327453456\n"
+      "  0.70657317  0.01050002  1.78587049  0.12691209  0.40198936]\n",
+      "-0.013374707098353167\n"
      ]
     }
    ],
@@ -419,7 +419,7 @@
     "def get_trimmed_mean(data, trim=.05):\n",
     "    print(data)\n",
     "    print(int(trim*len(data)))\n",
-    "    data = data[int(trim*len(data)):len(data)-int(trim*len(data))+1]\n",
+    "    data = data[int(trim*len(data)):len(data)-int(trim*len(data))]\n",
     "    print(data)\n",
     "    return np.mean(data)\n",
     "\n",
